<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
android:gravity="center"
android:orientation="vertical"
android:padding="10dp">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sign_up_label"
            android:id="@+id/sign_up_label"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/fName"
            android:textSize="17sp"
            android:id="@+id/fName"
            android:textColorHint="@color/black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/lName"
            android:textSize="17sp"
            android:id="@+id/lName"
            android:textColorHint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/gender"
            android:id="@+id/sexTextView" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gender"
            android:textSize="17sp"
            android:isScrollContainer="true"
            android:prompt="@string/gender"
            android:focusableInTouchMode="false" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="17sp"
            android:id="@+id/email"
            android:layout_gravity="center_horizontal"
            android:hint="@string/email"
            android:textColorHint="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textSize="17sp"
            android:id="@+id/telephone"
            android:hint="@string/telephone"
            android:textColorHint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/category"
            android:id="@+id/categoryTextView" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/category"
            android:isScrollContainer="true"
            android:textSize="17sp"
            android:prompt="@string/category" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="17sp"
            android:id="@+id/password"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password"
            android:textColorHint="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="17sp"
            android:id="@+id/confirm_password"
            android:layout_gravity="center_horizontal"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/black" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginTop="10dp"
            android:text="@string/btn_sign_up"
            android:textSize="17sp"
            android:background="@color/bg_pink"
            android:textColor="@color/white"
            android:shadowRadius="@integer/google_play_services_version"
            android:id="@+id/sign_up"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>



</LinearLayout>