<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="@color/white"
android:gravity="center"
android:orientation="vertical"
android:padding="10dp">

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sign_in_label"
            android:id="@+id/sign_in_label"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="17sp"
            android:id="@+id/email"
            android:layout_gravity="center_horizontal"
            android:hint="@string/email"
            android:textColorHint="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="17sp"
            android:id="@+id/password"
            android:hint="@string/password"
            android:textColorHint="@color/black" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginTop="10dp"
            android:shadowRadius="@integer/google_play_services_version"
            android:text="@string/btn_sign_in"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:background="@color/bg_pink"
            android:layout_gravity="center_horizontal"
            android:id="@+id/sign_in" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginTop="10dp"
            android:shadowRadius="@integer/google_play_services_version"
            android:text="@string/link_to_sign_up"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:background="@color/bg_pink"
            android:id="@+id/link_to_sign_up"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>